[package]
name = "tilewater"
version = "0.1.0"
authors = ["Epsylon <eepsylon.3@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy-immediate = { version = "0.1.0", path = "../bevy-immediate" }
derive_deref = "1.1.1"
ndarray = "0.14.0"
